tests/baselines/reference/tsxElementResolution3.errors.txt
file.tsx(12,7): error TS2339: Property 'w' does not exist on type '{ n: string; }'.


==== file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	    [x: string]: { n: string; };
    	}
    }
    
    // OK
    <div n='x' />;
    
    // Error
    <span w='err' />;
          ~
!!! error TS2339: Property 'w' does not exist on type '{ n: string; }'.